--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - "5433:5432"
 
   api:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: shalabhsuman/mutation-browser-api:0.1.0
     container_name: mutation-browser-api
     depends_on:
